--- a/MTA Project.ipynb
+++ b/MTA Project.ipynb
@@ -339,6 +339,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "123f8262",
+   "metadata": {},
+   "source": [
+    "*NOTE: I could not upload the database to the github repo due to its large size."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "26e74afe",
@@ -4168,7 +4176,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d24a8c80",
    "metadata": {},
@@ -4214,7 +4221,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "22afe1e4",
    "metadata": {},
@@ -4410,7 +4416,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c79f5e58",
    "metadata": {},
@@ -4485,7 +4490,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7f1b3fd4",
    "metadata": {},
